sprint6/Exc1/ingress-cluster.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insuretech-ingress
  namespace: insuretech
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cluster-a.insuretech.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: insuretech-service
                port:
                  number: 80
